tests/baselines/reference/breakInIterationOrSwitchStatement4.errors.txt
==== tests/cases/compiler/breakInIterationOrSwitchStatement4.ts (1 errors) ====
    for (var i in something) {
                  ~~~~~~~~~
!!! error TS2095: Could not find symbol 'something'.
      break;
    }